arch: arm64: configs: Enable MGLRU
MGLRU feature provide better memory management performance
Comparing with the traditional active/inactive LRU management

Change-Id: Ib80360c6fdcc9b1738ed17854a0df6043d7b19ab
Signed-off-by: William Liu <a17671@motorola.com>
Reviewed-on: https://gerrit.mot.com/2515810
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhenghai Pan <panzh2@lenovo.com>
Reviewed-by: Shengchun Li <lisc2@motorola.com>
Submit-Approved: Jira Key
Signed-off-by: zainarbani <zaintsyariev@gmail.com>

--- a/arch/arm64/configs/fleur_defconfig
+++ b/arch/arm64/configs/fleur_defconfig
@@ -14,6 +14,8 @@ CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI=y
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
