arm64: configs: Enable CFQ group schedule
Test: function enabled correctly
Bug: 112242999
Change-Id: Iee61f684836691f1758beb61c0f491f42c06c40e
Signed-off-by: Rick Yiu <rickyiu@google.com>

--- a/arch/arm64/configs/fleur_defconfig
+++ b/arch/arm64/configs/fleur_defconfig
@@ -29,6 +29,7 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_ARCH_MEDIATEK=y
 CONFIG_MACH_MT6781=y
 CONFIG_SCHED_MC=y
+CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_NR_CPUS=8
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_RANDOMIZE_BASE=y
