--- a/arch/arm64/configs/fleur_defconfig
+++ b/arch/arm64/configs/fleur_defconfig
@@ -1,5 +1,8 @@
 # KernelSU
 CONFIG_KSU=y
+CONFIG_KSU_SUSFS=y
+CONFIG_KSU_SUSFS_SUS_SU=n
+KSU_SUSFS_HAS_MAGIC_MOUNT=y
 CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_PREEMPT=y
